@@ -31,8 +31,15 @@ compile_kernel_args() {
 compile_utils_args()
 {
 	local ARGS
-
 	ARGS=''
+
+	if [ -n "${UTILS_CROSS_COMPILE}" ]
+	then
+		UTILS_CC="${UTILS_CROSS_COMPILE}-gcc"
+		UTILS_LD="${UTILS_CROSS_COMPILE}-ld"
+		UTILS_AS="${UTILS_CROSS_COMPILE}-as"
+	fi
+
 	if [ "${UTILS_ARCH}" != '' ]
 	then
 		ARGS="ARCH=\"${UTILS_ARCH}\""
